# rdkx5-smart-medical-car-

./: LICENSE  README.md
ros2_ws/: README.md  install_dependencies.sh  requirements.txt
ros2_ws/docs/: 技术文档.md
ros2_ws/src/human_detector/: package.xml  setup.py
ros2_ws/src/human_detector/human_detector/: human_detector_node.py  llm_interface_node.py
ros2_ws/src/human_detector/launch/: human_detector.launch.py
ros2_ws/src/navigation/: package.xml  setup.py
ros2_ws/src/navigation/config/: navigation_params.yaml
ros2_ws/src/navigation/launch/: navigation.launch.py
ros2_ws/src/navigation/navigation/: motion_controller_node.py  obstacle_avoidance_node.py  path_planner_node.py
ros2_ws/src/qr_detector/: package.xml  setup.py
ros2_ws/src/qr_detector/launch/: qr_detector.launch.py
ros2_ws/src/qr_detector/qr_detector/: qr_detector_node.py
ros2_ws/src/task_manager/: package.xml  setup.py
ros2_ws/src/task_manager/launch/: competition.launch.py  task_manager.launch.py
ros2_ws/src/task_manager/task_manager/: task_manager_node.py
ros2_ws/src/voice_output/: package.xml  setup.py
ros2_ws/src/voice_output/launch/: voice_output.launch.py
ros2_ws/src/voice_output/voice_output/: voice_output_node.py
